lesson23/k8s-secrets-management/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: secrets-platform
spec:
  mtls:
    mode: PERMISSIVE
